# green-cure

./: .gitignore  .pre-commit-config.yaml  README.md  dominican_republic_get_documents.py  manage.py  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt
.github/workflows/: lint.yml
assets/: do_post.json
