[project]
name = "green-cure"
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN", "COM", "EM",
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191", "D206", "Q000", "Q001", "Q002", "Q003", "ISC001",
  "D203", "D212",  # incompatible rules
  "D200",  # documentation preferences
  "C901", "PLR091",  # complexity preferences
  "D100", "D103",  # docstrings
  "PLR2004",  # Magic value used
  "PTH116",  # os.stat()
  "S101",  # Use of `assert` detected
  "S603",  # subprocess
  "S607",  # partial executable path
  "S113",  # requests timeout
  "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.uv.pip]
python-platform = "linux"  # nvidia-*
