[project]
name = "green-cure"
version = "0.0.0"

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", "C901", "COM812", "D203", "D212", "D415", "EM", "ISC001", "PERF203", "PLR091", "Q000",
    "D1",
    "PLR2004",  # magic
    "TRY003",  # errors
]

[tool.uv.pip]
python-platform = "linux"  # nvidia-*
